crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__operations.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/operations
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "neg:-3\n" [Continue]
> "mod:1\n" [Continue]
> "pow:27\n" [Continue]
> "floor:3\n" [Continue]
> "ceiling:4\n" [Continue]
> "int:3\n" [Continue]
> "float:1\n" [Done]
outcome: Done
