crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__path-to-self.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/path-to-self
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] === PASS
> "" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
> "A\n" [Choices: "A" (0) -> 0]
outcome: InputsExhausted
