crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__temp-global-conflict.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/temp-global-conflict
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "0\n" [Done]
outcome: Done
