crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__misc__visit-count-bug-due-to-nested-containers.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/misc/visit-count-bug-due-to-nested-containers
oracle: 1, brink: 1, matched: 1
passing: 0/1

=== episode [0] === FAIL
> "1\n" [Choices: "choice" (0) -> 0]
> "choice\n" [Continue]
> "1\n" [Done]
outcome: Error
